--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,15 +7,18 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/scoreValue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/scoreValue"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
         android:text="Score: 0"
         android:textColor="@color/white"
-        android:textSize="18sp"
-        android:layout_margin="16dp"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"/>
+        android:textSize="18sp" />
 
     <RelativeLayout
         android:layout_width="match_parent"
